--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/7f2d387e87.css" crossorigin="anonymous">
 </head>
 
 <body>
@@ -25,8 +26,27 @@
             </p>
             <button class="primary-bttn">Contuct Us</button>
         </div>
-
     </header>
+
+    <!-- main content section  -->
+    <section class="failure-content">
+        <div class="img-part">
+            <img src="/images/person.png" alt="">
+        </div>
+        <div class="text-part">
+            <h3>My failures of previous year</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+            from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief, is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular , is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief, is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular simply.</li>
+            </ul>
+        </div>
+
+    </section>
 </body>
 
 </html>
