--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:wght@500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://kit.fontawesome.com/7f2d387e87.css" crossorigin="anonymous">
 </head>
 
@@ -35,15 +37,50 @@
         </div>
         <div class="text-part">
             <h3>My failures of previous year</h3>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
-            from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                Latin literature
+                from 45 BC, making it over 2000 years old. Richard McClintock.</p>
             <ul>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief, is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular , is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular belief, is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                    belief, is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                    belief.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular ,
+                    is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                    belief, is not simply.</li>
+                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                    simply.</li>
             </ul>
+        </div>
+    </section>
+
+    <!-- my plan section  -->
+    <section class="my-plan-part">
+        <div class="plan-heading">
+            <h3>My Plans</h3>
+        </div>
+        <div class="plan-content">
+            <div class="plan-items">
+                <img src="/images/icons/web.png" alt="">
+                <h4>Web Development</h4>
+                <p>I want to start</p>
+            </div>
+            <div class="plan-items">
+                <img src="/images/icons/js.png" alt="">
+                <h4>Java Script</h4>
+                <p>I want to Learn</p>
+            </div>
+            <div class="plan-items">
+                <img src="/images/icons/smoke.png" alt="">
+                <h4>Smoking</h4>
+                <p>I want to end</p>
+            </div>
+            <div class="plan-items">
+                <img src="/images/icons/ecom.png" alt="">
+                <h4>ecommerce</h4>
+                <p>I want to develope</p>
+            </div>
         </div>
 
     </section>
