--- a/index.html
+++ b/index.html
@@ -82,8 +82,35 @@
                 <p>I want to develope</p>
             </div>
         </div>
-
     </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer-info">
+            <div class="future-part">
+                <h4>Future</h4>
+                <article>
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words
+                </article>
+                <p>
+                    <a href="info@gmail.com">Email : info@gmail.com</a> 
+                </p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="social-icon">
+                    <a href="facebook.com"><img src="/images/icons/fb.png" alt=""></a> 
+                    <a href="twitter.com"><img src="/images/icons/twitter.png" alt=""></a>
+                    <a href="youtube.com"><img src="/images/icons/youtube.png" alt=""></a>
+                </div>
+            </div>
+            <div class="subscribe-part">
+                <h5>Subscribe</h5>
+                <input type="email" placeholder="Enter your email">
+                <button class="primary-bttn">Contuct Us</button>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
