--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
         </div>
     </section>
 
+    <!-- gradient img banner -->
+    <section class="img-gradient">
+        <!-- <img src="/images/gradient2.png" alt=""> -->
+        <div class="img-gradient-content">
+            <h4>Always keep a positive mindset</h4>
+            <button id="secondary-button" class="primary-bttn">Call Now</button>
+
+        </div>
+
+    </section>
+
     <!-- footer -->
     <footer>
         <div class="footer-info">
@@ -95,11 +106,11 @@
                     form, by injected humour, or randomised words
                 </article>
                 <p>
-                    <a href="info@gmail.com">Email : info@gmail.com</a> 
+                    <a href="info@gmail.com">Email : info@gmail.com</a>
                 </p>
                 <p>Phone : 01500 00 00 00</p>
                 <div class="social-icon">
-                    <a href="facebook.com"><img src="/images/icons/fb.png" alt=""></a> 
+                    <a href="facebook.com"><img src="/images/icons/fb.png" alt=""></a>
                     <a href="twitter.com"><img src="/images/icons/twitter.png" alt=""></a>
                     <a href="youtube.com"><img src="/images/icons/youtube.png" alt=""></a>
                 </div>
