--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- main content section  -->
     <section class="failure-content">
         <div class="img-part">
-            <img src="/images/person.png" alt="">
+            <img src="images/person.png" alt="">
         </div>
         <div class="text-part">
             <h3>My failures of previous year</h3>
@@ -41,15 +41,15 @@
                 Latin literature
                 from 45 BC, making it over 2000 years old. Richard McClintock.</p>
             <ul>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                <li><span class="check-icon"><img src="images/icons/checkmark.png" alt=""></span>Contrary to popular
                     belief, is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                <li><span class="check-icon"><img src="images/icons/checkmark.png" alt=""></span>Contrary to popular
                     belief.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular ,
+                <li><span class="check-icon"><img src="images/icons/checkmark.png" alt=""></span>Contrary to popular ,
                     is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                <li><span class="check-icon"><img src="images/icons/checkmark.png" alt=""></span>Contrary to popular
                     belief, is not simply.</li>
-                <li><span class="check-icon"><img src="/images/icons/checkmark.png" alt=""></span>Contrary to popular
+                <li><span class="check-icon"><img src="images/icons/checkmark.png" alt=""></span>Contrary to popular
                     simply.</li>
             </ul>
         </div>
@@ -62,22 +62,22 @@
         </div>
         <div class="plan-content">
             <div class="plan-items">
-                <img src="/images/icons/web.png" alt="">
+                <img src="images/icons/web.png" alt="">
                 <h4>Web Development</h4>
                 <p>I want to start</p>
             </div>
             <div class="plan-items">
-                <img src="/images/icons/js.png" alt="">
+                <img src="images/icons/js.png" alt="">
                 <h4>Java Script</h4>
                 <p>I want to Learn</p>
             </div>
             <div class="plan-items">
-                <img src="/images/icons/smoke.png" alt="">
+                <img src="images/icons/smoke.png" alt="">
                 <h4>Smoking</h4>
                 <p>I want to end</p>
             </div>
             <div class="plan-items">
-                <img src="/images/icons/ecom.png" alt="">
+                <img src="images/icons/ecom.png" alt="">
                 <h4>ecommerce</h4>
                 <p>I want to develope</p>
             </div>
@@ -110,9 +110,9 @@
                 </p>
                 <p>Phone : 01500 00 00 00</p>
                 <div class="social-icon">
-                    <a href="facebook.com"><img src="/images/icons/fb.png" alt=""></a>
-                    <a href="twitter.com"><img src="/images/icons/twitter.png" alt=""></a>
-                    <a href="youtube.com"><img src="/images/icons/youtube.png" alt=""></a>
+                    <a href="facebook.com"><img src="images/icons/fb.png" alt=""></a>
+                    <a href="twitter.com"><img src="images/icons/twitter.png" alt=""></a>
+                    <a href="youtube.com"><img src="images/icons/youtube.png" alt=""></a>
                 </div>
             </div>
             <div class="subscribe-part">
